Fix logo clickability by increasing top-bar z-index

--- a/src/components/GameDeck.css
+++ b/src/components/GameDeck.css
@@ -12,10 +12,11 @@
 
 .top-bar {
     margin-bottom: 1rem;
-    z-index: 10;
+    z-index: 100;
     display: flex;
     justify-content: center;
     width: 100%;
+    position: relative;
 }
 
 .main-logo {
